[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdsim"
version = "0.1.0"
description = "Modular molecular dynamics engine using ASE"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ase",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mdsim = "mdsim.cli:main"
